fixed navbar and overflow

--- a/src/components/Navbar/navbar.module.scss
+++ b/src/components/Navbar/navbar.module.scss
@@ -9,7 +9,7 @@
   width: 100%;
   padding: 0 3vw;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-  z-index: 10;
+  z-index: 100;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -94,15 +94,15 @@
   transition: 0.3s all ease-in-out;
 }
 
-.light{
+.light {
   background: $primarylight;
 }
 
-.dark{
-    background: $primarydark;
+.dark {
+  background: $primarydark;
 }
 
-.title_toggle_div{
+.title_toggle_div {
   display: flex;
   gap: 1rem;
   align-items: center;
