--- a/src/pages/Experience/experience.module.scss
+++ b/src/pages/Experience/experience.module.scss
@@ -1,5 +1,5 @@
-@import '../../ui/colors';
-@import '../../ui/values';
+@import "../../ui/colors";
+@import "../../ui/values";
 
 @mixin keyframes($animation-name) {
   @-webkit-keyframes #{$animation-name} {
@@ -41,9 +41,11 @@
   position: absolute;
   left: 0;
   min-height: calc(100vh - #{$navbarheight});
+  max-height: calc(100vh - 4.8rem);
+  overflow: auto;
   width: 100%;
   margin-top: $navbarheight;
-  padding: 1rem 0;
+  // padding: 1rem 0;
   transition: 0.3s all ease;
 
   .wrapper {
@@ -61,7 +63,7 @@
       border-radius: 10px;
       width: fit-content;
       padding: 8px 10px;
-      font-family: 'Ubuntu Mono', monospace;
+      font-family: "Ubuntu Mono", monospace;
       letter-spacing: 0.5px;
     }
 
@@ -74,7 +76,7 @@
       border-radius: 10px;
       width: fit-content;
       padding: 8px 10px;
-      font-family: 'Ubuntu Mono', monospace;
+      font-family: "Ubuntu Mono", monospace;
       letter-spacing: 0.5px;
     }
 
@@ -91,12 +93,12 @@
   }
 }
 
-.light{
-    background-color: $lightbackground;
+.light {
+  background-color: $lightbackground;
 }
 
-.dark{
-    background-color: $darkbackground;
+.dark {
+  background-color: $darkbackground;
 }
 
 @media (max-width: 790px) {
